@@ -357,7 +357,9 @@ public class PookaDesktopPaneUIFactory implements PookaUIFactory {
    * Shows an Address Selection form for the given AddressEntryTextArea.
    */
   public void showAddressWindow(AddressEntryTextArea aeta) {
-    JInternalFrame jif = new JInternalFrame();
+    JInternalFrame jif = new JInternalFrame("Choose Address", true, true, true, true);
+    jif.getContentPane().add(new AddressBookSelectionPanel(aeta, jif));
+    jif.pack();
     getMessagePanel().add(jif);
     jif.setLocation(getMessagePanel().getNewWindowLocation(jif, true));
     
