@@ -346,7 +346,9 @@ public class PookaPreviewPaneUIFactory implements PookaUIFactory {
    * Shows an Address Selection form for the given AddressEntryTextArea.
    */
   public void showAddressWindow(AddressEntryTextArea aeta) {
-    JFrame jf = new JFrame();
+    JFrame jf = new JFrame("Choose Address");
+    jf.getContentPane().add(new AddressBookSelectionPanel(aeta, jf));
+    jf.pack();
     jf.show();
   }
 
